trunk/Archive2/00/1202b4fc91302f/output
+ g++ -Os -std=c++11 -Wall -pedantic main.cpp
main.cpp: In function 'int main()':
main.cpp:8:20: error: 'a' was not declared in this scope
         auto begin(a);
                    ^
